--- a/Portfolio/src/components/Navbar/navbar.scss
+++ b/Portfolio/src/components/Navbar/navbar.scss
@@ -3,6 +3,7 @@
 .navbar{
     height: 100px;
     cursor: none;
+    
     .wrapper{
         max-width: 1366px;
         margin: auto;
@@ -17,6 +18,7 @@
         span{
             font-weight: bold;
             font-size: 30px;
+            padding-left: 150px;
             @include mobile{
                 display: none;
             }
