--- a/Portfolio/src/components/hero/ButtonSpace.scss
+++ b/Portfolio/src/components/hero/ButtonSpace.scss
@@ -7,7 +7,7 @@ button#space-btn {
     border-radius: 30% 70% 70% 30% / 30% 30% 70% 70%;
     box-shadow: inset 0px 0px 21px #3b2ad5;
     background: #03001e;
-    cursor: pointer;
+    cursor: none;
   }
   
   button#space-btn:hover {
