--- a/Portfolio/src/components/hero/hero.scss
+++ b/Portfolio/src/components/hero/hero.scss
@@ -5,7 +5,6 @@
     background: linear-gradient(180deg, #0c0c1d, #181844);
     overflow: hidden;
     position: relative;
-    cursor: none;
     .wrapper {
         max-width: 1366px;
         height: 100%;
@@ -19,7 +18,7 @@
             display: flex;
             flex-direction: column;
             justify-content: center;
-            gap: 40px;
+            gap: 20px;
             width: 50%;
             @include mobile {
                 height: 50%;
@@ -34,6 +33,7 @@
             }
             h2 {
                 font-size: 29px;
+                padding-top: 60px;
                 color: rebeccapurple;
                 letter-spacing: 10px;
                 @include mobile {
@@ -65,8 +65,9 @@
     }
 
     .imageContainer {
-        top: 120px;
+        top: 90px;
         height: 500px;
+        left: 0px;
         width: 50%; // Ensures the image container takes half the width
         position: relative;  // Changed from right to left
         z-index: 1;
