--- a/Portfolio/src/components/parallax/parallax.scss
+++ b/Portfolio/src/components/parallax/parallax.scss
@@ -4,7 +4,7 @@
     width: 100%;
     height: 100%;
     position: relative;
-    display: flex;cursor: none;
+    display: flex;
     align-items: center;
     justify-content: center;
     overflow: hidden;
@@ -38,7 +38,7 @@
         background-position: bottom;
         width: 100%;
         height: 100%;
-        top: 10%;
+        top: 15%;
         position: absolute;
         z-index: 3;
         @include mobile{
