--- a/Portfolio/src/components/portfolio/portfolio.scss
+++ b/Portfolio/src/components/portfolio/portfolio.scss
@@ -2,17 +2,15 @@
 
 
 .portfolio{
-    position: relative;cursor: none;
+    position: relative;
     .progress{
         position: sticky;
         top: 0;
         left: 0;
-        padding-top: 50px;
+        padding-top: 25px;
         text-align: center;
         color: #6d4694;
         font-size: 36px;
-
-        
       h1{
         @include mobile{
           padding-top: 217px;
@@ -64,6 +62,7 @@
             .textContainer{
                 flex:1;
                 display: flex;
+                padding-top: 45px;
                 flex-direction: column;
                 gap: 20px;
                 @include mobile{
@@ -73,7 +72,7 @@
                   text-align: center;
               }
                 h2{
-                    font-size: 72px;
+                    font-size: 67px;
                     @include mobile{
                       font-size: 32px;
                   }
@@ -81,7 +80,7 @@
                 p{
                     color: gray;
                     font-size: 20px;
-                    padding-bottom: 40px;
+                    padding-bottom: 20px;
                     @include mobile{
                      font-size: 15px;
                   }
@@ -91,9 +90,9 @@
                 background-color: #6d4694;
                 border-radius: 50%; /* Circular button */
                 border: none;
-                width: 100px;
-                height: 100px; /* Equal width and height for a circle */
-                cursor: pointer;
+                width: 140px;
+                height: 140px; /* Equal width and height for a circle */
+                cursor: none;
                 position: relative; /* Needed for absolute positioning */
                 transition: transform 0.2s ease-out;
                 @include mobile{
@@ -101,9 +100,9 @@
               }
               }
               button:hover {
-                transform: scale(1.2) rotate(15deg); /* Scale up and rotate on hover */
+                transform: scale(0.2) rotate(15deg); /* Scale up and rotate on hover */
                 box-shadow: 0 8px 25px black; /* Increase shadow depth */
-                background-color: #4b2373; /* Change to a more vibrant color */
+                background-color: #651bae; /* Change to a more vibrant color */
               }
                   
                   
