--- a/Portfolio/src/components/parallax/services/services.scss
+++ b/Portfolio/src/components/parallax/services/services.scss
@@ -17,6 +17,8 @@
         @include mobile{
             align-self: center;
             text-align: center;
+            padding-top: 50px;
+            width: 220px;font-size: 14px;
             flex-direction: column;
         }
         hr{
@@ -24,7 +26,7 @@
             border: none;
             border-top: 0.5px solid #acacac;
             @include mobile{
-                width: 300px;
+                width: 100%;
             }
         }
     }
